# picotorokko

./: .gitignore  .picoruby-env.yml.example  .rubocop.yml  .rubocop_todo.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Gemfile  M5UNIFIED_HANDOFF.md  PRISM_PATTERN_TODO.md  Phase_5_Prism_Implementation_Guide.md  RAKEFILE_SPEC.md  README.md  REALITY_MARBLE_TODO.md  Rakefile  Rakefile.rb  SETUP.md  SPEC.md  Steepfile  TODO-mrbgems-install-feature.md  TODO.md  TODO_mrbgems.md  TODO_rubocop_picoruby.md  m5unified.md  m5unified.rb  m5unified_test.rb  pap.gemspec  picoruby-application-on-r2p2-esp32-development-kit.gemspec  picotorokko.gemspec  pra.gemspec  rbs_collection.lock.yaml  rbs_collection.yaml
.claude/: settings.json  settings.local.json
developer-guide/: documentation-coverage-analysis.md  documentation-generation.md  git-safety.md  output-style.md  step-execution-guide.md  testing-guidelines.md  type-annotation-guide.md  type-system-strategy.md
docs/: AST_TEMPLATE_ENGINE_SPEC.md  CI_CD_GUIDE.md  MRBGEMS_GUIDE.md  PHASE_0_EXECUTOR_ABSTRACTION.md  PICOTOROKKO_REFACTORING_SPEC.md  PROJECT_INITIALIZATION_GUIDE.md  SPECIFICATION.md
exe/: pap  ptrk
lib/: pap.rb  picotorokko.rb  pra.rb
patch/: README.md
playground/: README.md
playground/m5app/mrbgems/mrbgem-picoruby-m5unified/: CMakeLists.txt  mrbgem.rake
playground/m5app/mrbgems/mrbgem-picoruby-m5unified/ports/esp32/: m5unified_wrapper.cpp
playground/m5app/mrbgems/mrbgem-picoruby-m5unified/src/: m5unified.c
test/: binary_search_1_no_test_helper.rb  binary_search_2_with_test_helper.rb  (+42 more)
(+311 files in other folders)
